# To-do-list

./: App.cpp  App.h  CMakeLists.txt  Database.cpp  Database.h  MainFrame.cpp  MainFrame.h  README.md  Task.cpp  Task.h  database.cpp  database.h  main.cpp  tasks.sql
Tests/: CMakeLists.txt  tests.cpp
src/: App.cpp  App.h  Database.cpp  Database.h  MainFrame.cpp  MainFrame.h  README.md  Task.cpp  main.cpp
